# discord-bot-template

./: .gitignore  README.md  app.json  bot.py  pyproject.toml  requirements.txt
cogs/: hello.py  ready.py
